--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="module" src="https://cdn.jsdelivr.net/gh/compileit-ab/web-widget-script@main/index.js"></script>
-  <title>Document</title>
+  <title>Web widget script test</title>
 </head>
 <body>
-  <div data-business-id="David">
+  <div data-bcf-business-id="Compileit - Stockholm">
     <a
     href="https://www.barncancerfonden.se"
     >
