add script for email

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>Web widget script test</title>
 </head>
 <body>
-  <div data-bcf-business-id="Compileit - Stockholm">
+  <div data-bcf-business-id="Compileit - Varnamo">
     <a
     href="https://www.barncancerfonden.se"
     >
-  </a>
+    </a>
 </div>
 </body>
 </html>
