--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="https://web-widget-admin.vercel.app/script/widget-script.js" async></script>
+  <script type="text/javascript" src="./index.js" async></script>
   <title>Web widget script test</title>
 </head>
 <body>
