--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="./index.js" async></script>
+  <script type="text/javascript" src="http://localhost:3000/script/widget-script.js" async></script>
   <title>Web widget script test</title>
 </head>
 <body>
-  <div data-bcf-business-id="Compileit - Varnamo">
+  <div data-bcf-business-id="Compileit - Varnamo" data-widget-language="sv">
     <a
     href="https://www.barncancerfonden.se"
     >
